# AIWolfNLPCommon

./: .gitignore  .gitmodules  LICENSE  README.md  TODO  pyproject.toml  requirements.txt  ruff.toml
.github/: README.md
src/aiwolf_nlp_common/: __init__.py  action.py  day.py  divine.py  judgement.py  role.py  status.py  util.py
src/aiwolf_nlp_common/client/: client.py
src/aiwolf_nlp_common/client/ssh/: __init__.py  server.py
src/aiwolf_nlp_common/client/tcp/: __init__.py  client.py  server.py
src/aiwolf_nlp_common/client/websocket/: client.py
src/aiwolf_nlp_common/connection/: __init__.py  connection.py  ssh_server.py  tcp_client.py  tcp_connection.py  tcp_server.py
src/aiwolf_nlp_common/connection/ssh/: __init__.py  server.py
src/aiwolf_nlp_common/connection/tcp/: client.py  server.py  tcp_connection.py
src/aiwolf_nlp_common/connection/websocket/: client.py
src/aiwolf_nlp_common/protocol/: __init__.py  communication_protocol.py  game_info.py  judgement_result.py  packet.py  talk_list.py
src/aiwolf_nlp_common/protocol/gameInfo/: __init__.py  divine_result.py  game_info.py
src/aiwolf_nlp_common/protocol/gameInfo/list/: __init__.py  existing_role_list.py  talk_list.py  vote_list.py
src/aiwolf_nlp_common/protocol/gameInfo/map/: remain_talk_map.py  role_map.py  status_map.py
src/aiwolf_nlp_common/protocol/gameSetting/: __init__.py  game_setting.py
src/aiwolf_nlp_common/protocol/gameSetting/map/: role_num_map.py
src/aiwolf_nlp_common/protocol/info/: __init__.py  divine_result.py  info.py
src/aiwolf_nlp_common/protocol/info/list/: __init__.py  attack_vote_list.py  existing_role_list.py  last_dead_agent_list.py  vote_list.py
src/aiwolf_nlp_common/protocol/info/map/: __init__.py  remain_talk_map.py  remain_whisper_map.py  role_map.py  status_map.py
src/aiwolf_nlp_common/protocol/info/result/: __init__.py  divine_result.py  judgement_result.py  medium_result.py
src/aiwolf_nlp_common/protocol/list/: __init__.py  existing_role_list.py  last_dead_agent_list.py  talk_list.py  vote_list.py  whisper_list.py
src/aiwolf_nlp_common/protocol/map/: __init__.py  remain_talk_map.py  role_map.py  status_map.py
src/aiwolf_nlp_common/protocol/setting/: __init__.py  setting.py
src/aiwolf_nlp_common/role/: __init__.py  role.py  role_team.py
tests/: conftest.py  test.py  test_action.py  test_connection.py  test_role.py  test_uti.py
tests/protocol/: test_communication_protocol.py
tests/protocol/info/: test_info.py
tests/protocol/list/: conftest.py  test_existing_role_list.py  test_last_dead_agent_list.py  test_talk_list.py  test_vote_list.py
tests/protocol/map/: conftest.py  test_remain_talk_map.py  test_role_map.py  test_role_num_map.py  test_status_map.py
tests/protocol/setting/: test_setting.py
(+2 files in other folders)
