[project]
name = "aiwolf_nlp_common"
version = "0.2.0"
description = "aiwolf-nlp-common"
license = { file = "LICENSE" }
requires-python = ">=3.8"
readme = "README.md"
dependencies = [
  "pycparser >= 2.22 ",
  "cffi >= 1.4.1",
  "bcrypt >= 3.2",
  "cryptography >= 3.3",
  "PyNaCl >= 1.5",
  "paramiko >= 3.5",
  "websocket-client >= 1.8.0",
  "requests",
]
authors = [
  { name = "aiwolfdial", email = "aiwolf@kanolab.net" },
  { name = "nwatanabe", email = "aiwolf@kanolab.net" },
]
maintainers = [
  { name = "aiwolfdial", email = "aiwolf@kanolab.net" },
  { name = "nwatanabe", email = "aiwolf@kanolab.net" },
]
keywords = ["aiwolf", "aiwolfNLP", "aiwolfdial"]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["build>=1.2.2.post1", "pytest>=8.3.3", "twine>=5.1.1"]
lint = ["ruff>=0.7.4"]

[project.urls]
Homepage = "https://aiwolf.org"
