[project]
name = "aiwolf-nlp-common"
version = "0.3.2"
description = "aiwolf-nlp-common"
license = { file = "LICENSE" }
requires-python = ">=3.8"
readme = "README.md"
dependencies = ["paramiko>=3.5.0", "websocket-client>=1.8.0"]
authors = [
  { name = "aiwolfdial", email = "aiwolf@kanolab.net" },
  { name = "nwatanabe", email = "nwatanabe@kanolab.net" },
  { name = "ysahashi", email = "ysahashi@kanolab.net" },
]
maintainers = [
  { name = "aiwolfdial", email = "aiwolf@kanolab.net" },
  { name = "nwatanabe", email = "nwatanabe@kanolab.net" },
  { name = "ysahashi", email = "ysahashi@kanolab.net" },
]
keywords = ["aiwolf"]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["build>=1.2.2.post1", "pytest>=8.3.3", "twine>=5.1.1"]
lint = ["ruff>=0.7.4"]

[project.urls]
Homepage = "https://aiwolf.org"
